security config handle